--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/baerdon.jpg" alt="Baerdon's Profile Image" height="200" width="200"></td>
+        <td><img src="/images/baerdon.jpg" alt="Baerdon's Profile Image" height="200" width="200"></td>
         <td><h1>Jaroslav Bažant</h1>
         <p><em>Lékárník v Benešově a ajťák na volné noze.</em></p>
         <p>Momentálně pracuji jako vedoucí lékárník v lékárně Na Radnici v Benešově nad Ploučnicí na plný úvazek.
