--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.0-9/90381434_2518761695053147_695316254163992576_o.jpg?_nc_cat=110&ccb=3&_nc_sid=09cbfe&_nc_ohc=o0pRSFhHLDsAX_hgkbl&_nc_ht=scontent-prg1-1.xx&oh=4735ff8a1d980296dd904ecc25c9a09b&oe=604C9E8F" alt="Baerdon's Profile Image" height="200" width="200"></td>
+        <td><img src="Images/baerdon.jpg" alt="Baerdon's Profile Image" height="200" width="200"></td>
         <td><h1>Jaroslav Bažant</h1>
         <p><em>Lékárník v Benešově a ajťák na volné noze.</em></p>
         <p>Momentálně pracuji jako vedoucí lékárník v lékárně Na Radnici v Benešově nad Ploučnicí na plný úvazek.
